<resources>
    <string name="appname">Gym app</string>

    <string name="google_maps_key">AIzaSyAFWwJKOCz_vcbt6tjLTXrMsB5YHbYELak</string>
    <!-- empty layout -->
    <string name="retry">Retry</string>
    <string name="no_events_found">No events found :(</string>

    <!-- login -->
    <string name="terms_and_condition">Terms and conditions</string>

    <!-- home -->
    <string name="my_courses">My courses</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="find_courses">Find courses</string>
    <string name="settings">Settings</string>

    <!-- authentication -->
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save_changes">Save changes</string>
    <string name="token_expired">Session expired. Please login again.</string>
    <string name="register_successful">Your account was created</string>
    <string name="invalid_email_address">Invalid email adress</string>
    <string name="invalid_password">Invalid password</string>
    <string name="confirm_password">Confirm password</string>

    <!-- profile -->
    <string name="open_gallery">Open gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="file_path">file:///</string>
    <string name="check_sdcard_status">please check your sdcard status</string>
    <string name="products_error">Can\'t get products</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="update_faild">Update faild</string>
    <string name="update_profile">Profile has been updated</string>
    <string name="user_image_shared_pref">user_image</string>

    <!-- find courses -->
    <string name="reserve_course">Reserve</string>
    <string name="could_not_find_courses">No courses found</string>
    <string name="network_error">No internet connection</string>
    <string name="remove_course">Remove</string>
    <string name="unregister_successful">Course removed successfully</string>
    <string name="course_places_left">%1$d places left</string>
    <string name="course_no_places_left">No places left</string>
    <string name="registration_successful">Registration successful</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_courses_for_day">There are no courses for this day</string>

    <!-- my courses -->
    <string name="course_held_by">Course held by : %1$s</string>
    <string name="people_per_session">%1$d people / session</string>
    <string name="no_course_registrations">You are currently not registered to any course</string>
    <string name="password_do_not_match">Passwords don\'t match</string>
    <string name="invalid_name">Invalid name</string>
    <string name="email_address_in_use">The email adress is already is use</string>
    <string name="course_notification_title">Course \'%s\' will start soon!</string>
    <string name="yo">Heeeyo</string>

    <!-- create course -->
    <string name="Save">Save</string>
    <string name="create_course">Create course</string>
    <string name="tap_to_select_date">Tap to select date</string>
    <string name="date">Date</string>
    <string name="course_name">Course name</string>
    <string name="capacity">Capacity</string>
    <string name="select_image">Select image</string>
    <string name="no_image_uploaded">No image uploaded</string>
    <string name="course_create_success">Course created successfully</string>
    <string name="create_course_error">Could not create course</string>
    <string name="course_date_not_past">The course time cannot be in the past</string>
    <string name="course_capaciy_invalid">The course capacity must be between 1 and 50</string>
    <string name="course_name_invalid">The course name must have at least 3 characters</string>
    <string name="no_date_selected">No course date selected</string>


    <!-- notes -->
    <string name="notes">Notes</string>
    <string name="note_created_at">Created at %1$s</string>
    <string name="note_deleted">Note has been deleted</string>
    <string name="undo">Undo</string>
    <string name="note_add_error">Could not add note</string>
    <string name="note_add_success">Note added successfully</string>
    <string name="note_delete_error">Could not delete note</string>
    <string name="new_note">New note</string>
    <string name="add_note">Add note</string>
    <string name="note_text_invalid">Note text must be at least 5 characters long</string>
    <string name="no_notes_created">You have currently no notes</string>
    <string name="could_not_find_notes">Could not find notes</string>


    <!-- settings -->
    <string name="check_in">Check-in</string>
    <string name="check_out">Check out</string>
    <string name="enable_notifications">Notifications</string>
    <string name="enable_newsletter">Newsletter</string>


    <!-- scan -->
    <string name="scan">Scan</string>
    <string name="people_at_the_gym">People at gym:</string>

    <!-- gallery -->
    <string name="gallery">Gallery</string>
    <string name="no_photos_in_gallery">No photos in gallery</string>
    <string name="could_not_load_gallery">Could not load gallery</string>
    <string name="trained_courses">Trained courses</string>
    <string name="no_courses_created">You haven\'t created any course</string>
    <string name="delete_course_error">Could not delete course</string>
    <string name="update_course">Update course</string>
    <string name="update_course_error">Could not update course</string>
    <string name="nameofapp">ParkParkGo</string>
    <string name="title_activity_my_cars">My cars</string>
    <string name="title_activity_add_cars">Add cars</string>
    <string name="title_activity_add_parking_place">AddParkingPlace</string>
    <string name="title_activity_availability">Availability</string>
    <string name="title_activity_parking_history">ParkingHistoryActivity</string>

</resources>
