<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="@dimen/second_key_line"
    android:paddingStart="@dimen/second_key_line"
    tools:ignore="MissingPrefix">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_height"
        android:textColorHint="@color/light_gray"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email_input"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/small_margin"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_layout"
        android:textColorHint="@color/light_gray"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_input"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/login_email_layout"
            android:drawablePadding="@dimen/small_margin"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/login_centered_view"
        android:layout_width="@dimen/no_dimension"
        android:layout_height="@dimen/no_dimension"
        android:layout_below="@id/login_password_layout"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/login_button"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_layout"
        android:layout_marginTop="@dimen/primary_margin"
        android:layout_toStartOf="@id/login_centered_view"
        android:background="?attr/selectableItemBackground"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/authentication_button_text_size" />

    <Button
        android:id="@+id/register_new_button"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_layout"
        android:layout_marginTop="@dimen/primary_margin"
        android:layout_toEndOf="@id/login_centered_view"
        android:background="?attr/selectableItemBackground"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/authentication_button_text_size" />

</RelativeLayout>